<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScreenShot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_function">功能设置</string>
    <string name="settings_help">帮助说明</string>
    <string name="settings_feedback">问题反馈</string>
    <string name="settings_qrcode">二维码名片</string>
    <string name="settings_about">关于</string>
    <string name="settings_exit">退出</string>
    <string name="settings_delete">删除</string>
    <string name="settings_select_all">全选</string>
    <string name="mode_shake">摇一摇截屏</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_imagegrid">SettingActivity</string>
    <string name="click_me_start">点击我启动</string>
    <string name="click_me_stop">点击我停止</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="enter_main_page">进入主界面</string>
    <string name="no_data">没有数据</string>
    <string name="descr_image">Image</string>
    <string name="shake">摇晃</string>
    <string name="shake_sensitivity">摇晃敏感度</string>
    <string name="shake_prefer_summary">设置摇一摇截图的敏感度</string>
    <string name="vibrate">震动</string>
    <string name="title_vibrate">截图时震动</string>
    <string name="title_delay">延时</string>
    <string name="title_list_delay">屏幕截图延时</string>
    <string name="dialog_title_delay">请选择截图延时时间</string>
    <string name="default_delay_value">5</string>
    <string name="select_image_tips">请选择要删除的图片</string>
    <string name="dialog_delete_msg">删除中，请稍后...</string>
    <string name="dialog_title_delete_image">删除图片</string>
    <string name="dialog_msg_delete_image">确定要删除该图片吗？</string>
    <string name="dialog_positive_btn_text">确定</string>
    <string name="dialog_negative_btn_text">取消</string>
    <string name="dialog_title_delete_folder">删除文件夹</string>
    <string name="dialog_msg_delete_folder">确定要删除该文件夹吗？</string>
    <string name="dialog_title_prompt">提示</string>
    <string name="share">分享</string>
    <string name="please_choose">请选择</string>
    <string name="action_bar_share_with">分享...</string>
    <string name="loading_data">正在加载数据...</string>
    <string name="loading">加载中...</string>
    <string name="delete">删除</string>
    <string name="home_page">首页</string>
    <string name="screencap">截图</string>
    <string name="recommend">推荐</string>
    <string name="quit_comfirm">亲，确定要退出吗？</string>
    <string name="start_failed">启动失败</string>
    <string name="prompt_shake_mode_opened">摇一摇模式开启</string>
    <string name="prompt_shake_mode_closed">摇一摇模式关闭</string>
    <string name="prompt_at_least_choose_one_mode">请至少选择一种截图模式</string>
    
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="example_preference_dependency">Example preference dependency</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_wifi_settings">WiFi settings</string>
    <string name="default_value_list_preference">beta</string>
    <string name="default_value_edittext_preference">Default value</string>
    <string name="title_activity_image_pager">ImagePagerActivity</string>

</resources>
