<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/shake_tv" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="15dp"
	        android:textSize="18sp"
	        android:textColor="@color/dark_blue"
	        android:text="@string/mode_shake" />
	    
	    <org.jraf.android.backport.switchwidget.Switch
	        android:id="@+id/switch_widget"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    
    </LinearLayout>

    <FrameLayout
        android:layout_width="190.0dip"
        android:layout_height="65.0dip"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="30.0dip" >

        <TextView
            android:id="@+id/start_tv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_style_blue"
            android:gravity="center"
            android:paddingBottom="15.0dip"
            android:textColor="@color/white"
            android:textSize="22.0dip"
            android:text="@string/start"
            android:clickable="true" />

        <TextView
            android:id="@+id/tips_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="8.0dip"
            android:clickable="false"
            android:text="@string/click_me_start"
            android:textColor="@color/white" />
    </FrameLayout>

</RelativeLayout>